# hexplore

./: Cargo.toml  README.md  justfile  typos.toml
src/: app.rs  cli.rs  display.rs  events.rs  file.rs  logging.rs  main.rs  movement.rs  popup.rs
