[package]
name = "hexplore"
version = "0.1.0"
description = """
Hexplore is a TUI-rendered hexdump. It gives a hexadecimal and ascii view
of the opened file.
"""
keywords = ["hexdump", "TUI"]
readme = "README.md"
repository = "https://github.com/J3y0/hexplore"
edition = "2024"

[dependencies]
anyhow = "1.0.99"
clap = { version = "4.5.47", features = ["derive"] }
derive_setters = "0.1.8"
ratatui = "0.29.0"
